#29 Fixed wrapping of audit message

--- a/menas/ui/css/style.css
+++ b/menas/ui/css/style.css
@@ -26,6 +26,10 @@ html, body {
   min-width: 40rem !important;
 }
 
+.mt10 {
+	margin-top: 10px;
+}
+
 .menasAddMappingFlex {
   div {
     width: calc(100% - 38px);
@@ -33,10 +37,18 @@ html, body {
 }
 
 .auditTrailNestedListItem {
-	max-width: 100% !important;
+	max-width: 100%;
 	background-color: inherit !important;
+	border-bottom: 0px !important;
 }
 
 .auditTrailNestedList > ul > .sapMListNoData {
     background-color: inherit !important;
+    border-bottom: 0px !important;
+    padding-left: 0px !important;
+}
+
+.auditTrailNestedList > ul > li {
+    width: 100%;
+    display: inline-block !important;
 }
